--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -31,6 +31,7 @@ flowchart LR;
 <blockquote>
 
 ⚠️ **Note**:
+
 - You can only use Lattice for subgraphs in the **same AWS region as your Cloud Router**. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please [let us know](mailto:cloud@apollographql.com).
 - Using AWS VPC Lattice incurs costs outside of your Cloud Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
 
@@ -54,59 +55,106 @@ This guide offers step-by-step instructions for each stage.
 A Lattice **target group** is a collection of targets, or compute resources, that run your application or service. You must set these up so your Lattice services can route requests accurately. Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
 
 1. In the AWS Console for your region of choice, go to the VPC service page:
+
 - [US East (N. Virginia) — `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
 - [Europe (Ireland) — `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
 
 2. In the menu on the left, scroll down and open **Target groups** in the **VPC Lattice** section.
 
-<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page left menu"
+  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+/>
 
 3. Click **Create target group** on the top right.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-target-group.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/create-target-group.jpg"
+/>
 
 4. In the **Basic configuration** section, set the properties that match your subgraph resources.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/target-group-configuration.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/target-group-configuration.jpg"
+/>
 
 5. (Optional) If you use a target type with health checks, ensure you configure your health checks correctly, or Lattice will not be able to send traffic to your subgraphs.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/target-group-health-checks.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/target-group-health-checks.jpg"
+/>
 
 6. Register the targets based on your chosen target type.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/register-targets.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/register-targets.jpg"
+/>
 
 7. Review your targets to make sure all information is correct.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/review-targets.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/review-targets.jpg"
+/>
 
 8. Click **Create target group** at the bottom right corner of the page.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-target-group-final.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/create-target-group-final.jpg"
+/>
 
 Congratulations! You've created an AWS VPC Lattice target group. Repeat this process for each resource you want to share with Cloud Dedicated.
 
 ### Step 2. Create an AWS VPC Lattice service
 
 1. In the AWS Console for your region, go to the VPC service page:
+
 - [US East (N. Virginia) — `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
 - [Europe (Ireland) — `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
+
 2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
 
-<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page left menu"
+  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+/>
 
 3. Click **Create service** in the top right.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-service.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/create-service.jpg"
+/>
 
 4. In the **Identifiers** section, give the name, description, and tags of your choice for the service.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-identifiers.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/service-identifiers.jpg"
+/>
 
 5. In the **Custom domain configuration** section, leave the **Specify a custom domain configuration** checkbox **unselected**.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/custom-domain.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/custom-domain.jpg"
+/>
 
 6. In the **Service access** section, select the AWS IAM authentication type and paste the following auth policy. This policy ensures that only the AWS Organization for Cloud Dedicated can send traffic to your subgraphs.
 
@@ -129,87 +177,160 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
 }
 ```
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-access-policy.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/service-access-policy.jpg"
+/>
 
 7. (Optional) For extra security, you can audit all the traffic coming to your subgraph by enabling access logs in the **Monitoring** section.
 
 8. Once you've configured the service, click **Next** on the bottom right of the page.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-monitoring.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/service-monitoring.jpg"
+/>
 
 9. Define routing information to your target groups. Set the protocol to **HTTPS** and the port to **443**.
 
 > For security reasons, we require you to use HTTPS for your listener. This enforces encryption in transit of the traffic between your GraphOS Cloud Router and your Lattice listener.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/http-listener.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/http-listener.jpg"
+/>
 
 10. If you have multiple target groups, add a rule for each subgraph.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-rules.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/service-rules.jpg"
+/>
 
 11. Click **Next** at the bottom right of the page once you've configured your listener.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/listener-complete.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/listener-complete.jpg"
+/>
 
 12. Do _NOT_ select a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-network.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/service-network.jpg"
+/>
 
 13. Ensure the information you've entered is correct, then click **Create VPC Lattice service** at the bottom right of the page.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-service-final.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/create-service-final.jpg"
+/>
 
 Congratulations! You've now created a Lattice service for your subgraphs.
 
 ### Step 3. Share the AWS VPC Lattice service with Cloud Dedicated
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
+
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
 
 2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
 
-<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page left menu"
+  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+/>
 
 3. Click **Create resource share** in the top right corner.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/create-resource-share.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/create-resource-share.jpg"
+/>
 
 4. In the **Resource share name** section, enter a name for your resource share.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-share-name.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-share-name.jpg"
+/>
 
 5. In the **Resources section**, select the resource type **VPC Lattice Services**.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-share-name.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-share-name.jpg"
+/>
 
 6. Select all the Lattice services that contain your subgraphs.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-selection.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-selection.jpg"
+/>
 
 7. (Optional) Set tags for your resource share.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-tags.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-tags.jpg"
+/>
 
 8. Click the **Next** button at the bottom right corner of the page.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-tags-next.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-tags-next.jpg"
+/>
 
 9. Verify that the managed permissions give access to associate the Lattice services with a service network (`vpc-lattice:CreateServiceNetworkServiceAssociation and vpc-lattice:GetService`). Then click the **Next** button at the bottom right of the page.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/managed-permissions.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/managed-permissions.jpg"
+/>
 
 10. In the **Principals** section, select **Allow sharing with anyone** with a principal type of **AWS account**, enter the following value for the account ID: `282421723282`, then click the **Add** button.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-principal.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-principal.jpg"
+/>
 
 11. Confirm that `282421723282` is the only selected principal for this resource share, then click the **Next** button on the bottom right corner.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-principal-confirmation.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/resource-principal-confirmation.jpg"
+/>
 
 12. Confirm that all the information is correct, then click **Create resource share** at the bottom right of the page.
 
-<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/create-resource-share-final.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC shared resources page"
+  src="../../../img/cloud-dedicated/create-resource-share-final.jpg"
+/>
 
 Congratulations! You've now shared your Lattice services with Cloud Dedicated.
 
@@ -218,6 +339,7 @@ The last step is associating your resource share with the Apollo Organization ac
 <blockquote>
 
 ⚠️ **Note**:
+
 - You only have 12 hours to associate your resource share—otherwise, AWS Resource Access Manager will fail to process the invitation, and you will have to restart this step.
 - For security purposes, we recommend you continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](#removing-access-to-private-subgraphs) and restart this step.
 
@@ -226,19 +348,33 @@ The last step is associating your resource share with the Apollo Organization ac
 ### Step 4. Associate your resource share with your Apollo Organization
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
+
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+
 2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
 
-<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/shared-by-me.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page left menu"
+  src="../../../img/cloud-dedicated/shared-by-me.jpg"
+/>
 
 3. Click the resource share you created in the previous step.
 
-<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/select-resource-share.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC resource share page"
+  src="../../../img/cloud-dedicated/select-resource-share.jpg"
+/>
 
 4. Copy the **ARN** for the resource share.
 
-<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/resource-share-summary.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC resource share page"
+  src="../../../img/cloud-dedicated/resource-share-summary.jpg"
+/>
 
 Setup from this point differs based on whether this is [your first private subgraph](#setup-for-new-private-subgraphs) or if you're adding this [service to an existing graph](#setup-for-existing-graphs).
 
@@ -284,12 +420,12 @@ Setup from this point differs based on whether this is [your first private subgr
   width="500"
 />
 
-7. In the modal, select the **Private** option, then select the AWS service you want to add from the dropdown menu. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you like.
+7. From the dropdown menu, select the Lattice service that you would like to connect to your GraphOS Router. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
 
 <img
   className="screenshot"
   alt="Selecting a private Lattice service"
-  src="../../../img/cloud-dedicated/select-private-service.jpg"
+  src="../../img/cloud-dedicated/select-private-lattice-service.jpg"
   width="500"
 />
 
@@ -302,7 +438,7 @@ Setup from this point differs based on whether this is [your first private subgr
   width="300"
 />
 
-9. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload Schema** button.
+9. Paste the GraphQL schema for this subgraph in the **Schema** field. You can also upload a schema file by clicking the **Upload Schema** button.
 
 <img
   className="screenshot"
@@ -332,7 +468,7 @@ When your AWS resource is set to private, it isn't accessible by external servic
   className="screenshot"
   alt="Pressing the Create GraphOS Router button"
   src="../../../img/cloud-dedicated/create-graphos-router.jpg"
-    width="200"
+  width="200"
 />
 
 Congratulations! You've now created a GraphOS Cloud Router with a private subgraph.
@@ -368,7 +504,7 @@ Congratulations! You've now created a GraphOS Cloud Router with a private subgra
   width="300"
 />
 
-6. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload Schema** button.
+6. Paste the GraphQL schema for this subgraph in the **Schema** field. You can also upload a schema file by clicking the **Upload Schema** button.
 
 <img
   className="screenshot"
@@ -394,44 +530,80 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
 ### Remove resource shares
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
+
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+
 2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
 
-<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page left menu"
+  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+/>
 
 3. Select the resource share(s) associated with Cloud Dedicated and click the **Delete** button in the top right corner.
 
-<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/create-resource-share.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC resource share page"
+  src="../../../img/cloud-dedicated/create-resource-share.jpg"
+/>
 
 4. Click **Delete** in the popup modal.
 
-<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/delete-resource-share.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC resource share page"
+  src="../../../img/cloud-dedicated/delete-resource-share.jpg"
+/>
 
 ### Remove service network associations
 
 1. In the AWS Console for your region of choice, go to the VPC service page:
+
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+
 2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
 
-<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page left menu"
+  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+/>
 
 3. Click the name of the Lattice service you want to disconnect.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/select-lattice-service.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/select-lattice-service.jpg"
+/>
 
 4. In the **Service network associations**, select the **graphos-cloud** service name.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/graphos-service.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/graphos-service.jpg"
+/>
 
 5. Click the **Actions** button in the top right of that section, and click **Delete network associations**.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/delete-network-associations.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/delete-network-associations.jpg"
+/>
 
 6. Follow the confirmation instructions and click **Delete**.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/delete-network-associations-final.jpg" />
+<img
+  className="screenshot"
+  alt="AWS VPC service page"
+  src="../../../img/cloud-dedicated/delete-network-associations-final.jpg"
+/>
 
 Deleting the network association can take a few seconds. Once the network association is deleted, Cloud Dedicated cannot contact your subgraphs anymore.
 
