--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -9,7 +9,7 @@ The **Apollo Datadog integration** enables you to forward your enterprise graph'
 
 <Note>
 
-GraphOS only forwards metrics for **named GraphQL operations**. Metrics for _anonymous_ operations are not forwarded. Make sure your graph's clients name all operations:
+GraphOS only forwards metrics for **named GraphQL operations**. It doesn't forward metrics for anonymous operations. Make sure your graph's clients name all operations:
 
 ```graphql
 ❌
@@ -27,9 +27,9 @@ query HelloQuery {
 
 ## Setup
 
-To integrate with Datadog, you provide your Datadog API key and region to Studio. A Datadog account with administrator privileges is required to obtain an API key.
+To integrate Apollo with Datadog, you provide your Datadog API key and region to GraphOS Studio. A Datadog account with administrator privileges is required to obtain an API key.
 
-1. Go to your [Datadog Integrations page](https://app.datadoghq.com/account/settings) and select **Apollo** from the list:
+1. Go to your [Datadog Integrations page](https://app.datadoghq.com/account/settings) and select the **Apollo Integration** from the list:
 
    <img
      src="../img/datadog/integration-tile.png"
@@ -39,7 +39,7 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
 
    Then go to the Configuration tab and click **Install Integration** at the bottom.
 
-2. Go to your [Datadog APIs page](https://app.datadoghq.com/account/settings#api) and create an API key:
+2. Go to your [Datadog APIs page](https://app.datadoghq.com/account/settings#api) and select **Create API key**.
 
    <img
      src="../img/datadog/api-key.png"
@@ -76,13 +76,13 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
      width="500"
    />
 
-   You can use the same Datadog API key for all of your graphs, because all forwarded metrics are tagged with the corresponding graph's ID (`graph:<graph-id>`).
+   You can use the same Datadog API key for all of your graphs because all forwarded metrics are tagged with the corresponding graph's ID (`graph:<graph-id>`).
 
-6. That's it! After about five minutes, your Datadog metrics explorer will begin showing metrics forwarded from Studio.
+That's it! After about five minutes, your Datadog Metrics Explorer will begin showing metrics forwarded from GraphOS Studio.
 
-## Forwarded metrics
+### Forwarded metrics
 
-Studio forwards the following metrics to Datadog:
+GraphOS Studio forwards the following metrics to Datadog:
 
 | Name                                                                                                                                                                                                                                     | Description                                                                                                                                                                   |
 | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -103,22 +103,22 @@ If you set up your integration before October 2020, the metric names start with 
 
 ## Exploring metrics
 
-In the [Datadog metrics explorer](http://app.datadoghq.com/metric/explorer?exp_metric=apollo.operations.count&exp_group=graph&exp_agg=sum&exp_row_type=metric), all Studio metrics are [tagged](https://www.datadoghq.com/blog/the-power-of-tagged-metrics/) with the graph ID (`graph:<graph-id>`), the variant name (`variant:<variant-name>`), and the operation name (`operation:<query-name>`). These values are normalized according to Datadog naming requirements (all letters are lowercase, and illegal symbols are converted to underscores).
+In the [Datadog Metrics Explorer](http://app.datadoghq.com/metric/explorer?exp_metric=apollo.operations.count&exp_group=graph&exp_agg=sum&exp_row_type=metric), all GraphOS Studio metrics are [tagged](https://www.datadoghq.com/blog/the-power-of-tagged-metrics/) with the graph ID (`graph:<graph-id>`), the variant name (`variant:<variant-name>`), and the operation name (`operation:<query-name>`). These values are normalized according to Datadog naming requirements (all letters are lowercase and illegal symbols are converted to underscores).
 
-Tagging enables you to see data at any level of granularity, whether you want to aggregate across all operations or zoom in to a particular operation. You can control granularity by choosing a relevant set of operation tags for filtering, along with appropriate functions for [time aggregation](https://docs.datadoghq.com/metrics/introduction/#time-aggregation) and [space aggregation](https://docs.datadoghq.com/metrics/introduction/#space-aggregation). Similarly, if you want to compare metrics across staging and production environments, you can filter with the appropriate variant tags.
+Tagging enables you to see data at any level of granularity, whether you want to aggregate across all operations or zoom in on a particular operation. You can control granularity by choosing a relevant set of operation tags for filtering, along with appropriate functions for [time aggregation](https://docs.datadoghq.com/metrics/introduction/#time-aggregation) and [space aggregation](https://docs.datadoghq.com/metrics/introduction/#space-aggregation). Similarly, if you want to compare metrics across staging and production environments, you can filter with the appropriate variant tags.
 
-### Example
+### Datadog Metrics Explorer example
 
 Suppose you want to see the 95th percentile request latency averaged across all operations for a staging and a production graph.
 
-In the [Datadog metrics explorer](https://app.datadoghq.com/metric/explorer):
+In the [Datadog Metrics Explorer](https://app.datadoghq.com/metric/explorer):
 
 1. In the **Graph** field, select `apollo.operations.latency.95percentile`.
 2. In the **Over** field, select the name of the graph to display.
 3. In the **One graph per** field, select `variant`. Choose the variants for your production and staging environments.
 4. In the **On each graph, aggregate with the** field, select `Average of reported values`.
 
-At Apollo, we use Studio to monitor Studio itself, so this graph for us looks like the following:
+At Apollo, we use GraphOS Studio to monitor GraphOS Studio itself. For us, this graph looks something like the following:
 
 <img
   src="../img/datadog/datadog.png"
@@ -132,9 +132,9 @@ To generate more advanced reports, open up a [Datadog notebook](https://app.data
 
 You can configure complex alerts with [Datadog monitors](https://docs.datadoghq.com/monitors/).
 
-### Example #1
+### Datadog metric alert example
 
-Studio's Notifications feature supports alerts that trigger when the percentage of requests with an error in the last 5 minutes exceeds some threshold for a specific operation. Suppose that instead of alerting on a specific operation in the last 5 minutes, we want to alert on the error percentage over _all_ operations in some graph in the last 10 minutes, such as when the percentage exceeds 1% for a graph `mygraph` with variant `staging`.
+GraphOS Studio's [Notifications feature](./notifications/notification-setup) supports alerts that trigger when the percentage of requests with an error in the last five minutes exceeds some threshold for a specific operation. Suppose that instead of alerting on a specific operation in the last five minutes, you want to alert on the error percentage over _all_ operations in some graph in the last ten minutes, such as when the percentage exceeds 1% for the graph `mygraph` with variant `staging`.
 
 The [Datadog metric alert query](https://docs.datadoghq.com/api/v1/monitors/#query-types) needed here is:
 
@@ -144,9 +144,9 @@ sum(last_10m):sum:apollo.operations.error_count{graph:mygraph,variant:staging}.a
 
 The `.rollup(sum).fill(null)` is necessary because `apollo.operations.count` is a [Datadog gauge](https://docs.datadoghq.com/developers/metrics/types/?tab=gauge#metric-types), which means it [defaults to using `avg` for time aggregation](https://docs.datadoghq.com/dashboards/functions/rollup/#rollup-interval-enforced-vs-custom) and [defaults to linear interpolation during space aggregation and query arithmetic](https://docs.datadoghq.com/monitors/guide/monitor-arithmetic-and-sparse-metrics/). The `.as_count()` is necessary to ensure that [operation counts are summed before the division and not after](https://docs.datadoghq.com/monitors/guide/as-count-in-monitor-evaluations/).
 
-### Example #2
+### Datadog composite monitor example
 
-Consider the error percentage monitor from the previous example. When the number of operations is small, a few errors might cause the error percentage to exceed the threshold, resulting in a noisy monitor during periods of low traffic. We want to alert _only_ when the number of operations isn't small (e.g., more than 10 in the last 10 minutes).
+Consider the error percentage monitor from the previous example. When the number of operations is small, a few errors might cause the error percentage to exceed the threshold, resulting in a noisy monitor during low traffic periods. We want to alert only when the number of operations isn't small, for example, more than ten in the last ten minutes.
 
 You can use [Datadog composite monitors](https://docs.datadoghq.com/monitors/monitor_types/composite/) to support this kind of alert. First, create a monitor with the following metric alert query:
 
@@ -154,4 +154,4 @@ You can use [Datadog composite monitors](https://docs.datadoghq.com/monitors/mon
 sum(last_10m):sum:apollo.operations.count{graph:mygraph,variant:staging}.rollup(sum).fill(null) > 10
 ```
 
-Then create a composite monitor for the two monitors of the form `a && b`, which will have the desired behavior.
+Then, create a composite monitor for the two monitors of the form `a && b`, which will have the desired behavior.
